@@ -46,6 +46,9 @@ RELEASE 0.07 -
 
   - Added $SOURCE variable as a synonym for $SOURCES[0].
 
+  - Write out .sconsign files on error or interrupt so intermediate
+    build results are saved.
+
 
 
 RELEASE 0.06 - Thu, 28 Mar 2002 01:24:29 -0600
